--- a/src/LibrarySystemForDemo.Web.Mvc/LibrarySystemForDemo.Web.Mvc.csproj
+++ b/src/LibrarySystemForDemo.Web.Mvc/LibrarySystemForDemo.Web.Mvc.csproj
@@ -44,6 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\libs\" />
+    <Folder Include="wwwroot\view-resources\Views\Category\" />
+    <Folder Include="wwwroot\view-resources\Views\Author\" />
+    <Folder Include="wwwroot\view-resources\Views\Book\" />
+    <Folder Include="wwwroot\view-resources\Views\Student\" />
     <Folder Include="wwwroot\view-resources\Views\_Bundles\" />
   </ItemGroup>
 </Project>
